--- a/index.html
+++ b/index.html
@@ -6,12 +6,6 @@
     <link rel="stylesheet" href="index.css">
     <link href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" rel="stylesheet">
     <script src="//code.jquery.com/jquery-2.2.4.min.js"></script>
-    <script>
-    //共通パーツ読み込み
-      $(function() {
-          $("#header").load("header.html");
-      });
-    </script>
     <script src="top.js"></script>
   </head>
   <body>
@@ -31,7 +25,7 @@
           <li><a href="index.html"><span>top</span></a></li>
           <li><a href="work.html"><span>work</span></a></li>
           <li><a href="portfolio.html"><span>portfolio</span></a></li>
-          <li><a href="#"><span>contact</span></a></li>
+          <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfqWdRnzcMn2TVZr3YGztrPGsXC1KNALqRG92momRPCPUgo5g/viewform?usp=sf_link"><span>contact</span></a></li>
         </ul>
       </div>
     </header>
