photo name change

--- a/work.html
+++ b/work.html
@@ -60,7 +60,7 @@
 
     <div class="photos">
       <img src="images/prof6.jpeg" class="photo1">
-      <img src="images/prof9.jpg" class="photo2">
+      <img src="images/prof9.JPG" class="photo2">
     </div>
       </div>
     </div>
