--- a/portfolio.html
+++ b/portfolio.html
@@ -1,4 +1,4 @@
-<html>
+<!-- <html>
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -55,6 +55,46 @@
           </div>
         </div>
       </div>
+    </div>
+  </body>
+</html> -->
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>my-profile</title>
+    <link rel="stylesheet" href="image.css">
+    <link href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" rel="stylesheet">
+    <script src="top.js"></script>
+    <script src="button.js"></script>
+  </head>
+  <body>
+    <header id="header">
+      <div class="header">
+        <div class="header-left">
+          <a href="index.html"><img src="images/logo1_1.png" class="logo"></a>
+        </div>
+        <div class="header-right">
+          <div class="sns">
+            <a href="https://www.instagram.com/manabu_okubo/"><span class="insta"><i class="fab fa-instagram fa-4x"></i></span></a>
+          </div>
+        </div>
+      </div>
+      <div class="navigation">
+        <ul class="nav">
+          <li><a href="index.html"><span>top</span></a></li>
+          <li><a href="work.html"><span>work</span></a></li>
+          <li><a href="portfolio.html"><span>portfolio</span></a></li>
+          <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfqWdRnzcMn2TVZr3YGztrPGsXC1KNALqRG92momRPCPUgo5g/viewform?usp=sf_link"><span>contact</span></a></li>
+        </ul>
+      </div>
+    </header>
+    <div class="sample">
+      <ul>
+        <li><a href="https://manabu-creater.github.io/yamaki-hp/"><img src="images/work1.png" class="sample-img"></a></li>
+        <li><a href="https://meat-kajiyama1.herokuapp.com/"><img src="images/work2.png" class="sample-img"></a></li>
+        <li><a href="https://manabu-creater.github.io/yamaki-hair/"><img src="images/work3.png" class="sample-img"></a></li>
+    </ul>
     </div>
   </body>
 </html>
