--- a/portfolio.html
+++ b/portfolio.html
@@ -63,7 +63,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my-profile</title>
-    <link rel="stylesheet" href="image.css">
+    <link rel="stylesheet" href="portfolio.css">
     <link href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" rel="stylesheet">
     <script src="top.js"></script>
     <script src="button.js"></script>
