--- a/portfolio.html
+++ b/portfolio.html
@@ -91,10 +91,19 @@
     </header>
     <div class="sample">
       <ul>
-        <li><a href="https://manabu-creater.github.io/yamaki-hp/"><img src="images/work1.png" class="sample-img"></a></li>
-        <li><a href="https://meat-kajiyama1.herokuapp.com/"><img src="images/work2.png" class="sample-img"></a></li>
-        <li><a href="https://manabu-creater.github.io/yamaki-hair/"><img src="images/work3.png" class="sample-img"></a></li>
-    </ul>
+        <li class="site">
+          <p>ホームページ</p>
+          <a href="https://manabu-creater.github.io/yamaki-hp/"><img src="images/work1.png" class="sample-img"></a>
+        </li>
+        <li class="site">
+          <p>ショッピングサイト</p>
+          <a href="https://meat-kajiyama1.herokuapp.com/"><img src="images/work2.png" class="sample-img"></a>
+        </li>
+        <li class="site">
+          <p>ランディングページ</p>
+          <a href="https://manabu-creater.github.io/yamaki-hair/"><img src="images/work3.png" class="sample-img"></a>
+        </li>
+      </ul>
     </div>
   </body>
 </html>
